Changed image size in index.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <header>Elizabeth Sweeny</header>
-    <div class="nav">
-        <ul>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </ul>
-    </div>
+   <section id="top_bar">
+        <header>Elizabeth Sweeny</header>
+        <div class="nav">
+            <ul>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </ul>
+        </div>
+   </section>
+  
     <section id="about_me"> 
+        
         <div id="about_me_content">
             <h2>About Me</h2>
             <hr>
+            <img src="assets/images/elizabeth_sm_headshot.jpg" alt="Elizabeth Headshot" height="100">
             <p>
                 I grew up in Mountain View, California. I'm going to write more paragraphs here, but will wait.
             </p>
