--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Elizabeth Sweeny Basic Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/Users/egsweeny/Desktop/UCB_Bootcamp/Assignments/HW1_Basic-Profile/Basic-Portfolio/assets/css/style.css">
     <script src="main.js"></script>
 </head>
 <body>
-   <section id="top_bar">
-        <header>Elizabeth Sweeny</header>
+   <div id="top_bar">
         <div class="nav">
-            <ul>
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </ul>
+            <header>Elizabeth Sweeny</header>
+                <ul>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a class="active" href="index.html">About</a></li>
+                  </ul>
         </div>
    </section>
   
     <section id="about_me"> 
         
-        <div id="about_me_content">
+        <div class="about_me_content">
             <h2>About Me</h2>
             <hr>
             <img src="assets/images/elizabeth_sm_headshot.jpg" alt="Elizabeth Headshot" height="100">
