--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
         
         <div class="about_me_content">
             <h2>About Me</h2>
-            <hr>
-            <img src="assets/images/elizabeth_sm_headshot.jpg" alt="Elizabeth Headshot" height="100">
+            <hr width="95%">
+            <img src="assets/images/elizabeth_sm_headshot.jpg" alt="Elizabeth Headshot" height="175">
             <p>
-                I grew up in Mountain View, California. I'm going to write more paragraphs here, but will wait.
+                I grew up in Mountain View, California. My professional mission is to effectively integrate best business practices with technical acumen to bring impactful, meaningful products and services to market.
+                <br>
+                <br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                <br>
+                <br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
             </p>
         </div>
     </section>
