Major changes to contact and portfolio pages.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-   <div id="top_bar">
+    <section id="top_bar"></div>
         <div class="nav">
             <header>Elizabeth Sweeny</header>
                 <ul>
@@ -18,11 +18,10 @@
                     <li><a class="active" href="index.html">About</a></li>
                   </ul>
         </div>
-   </section>
+    </div>
   
     <section id="about_me"> 
-        
-        <div class="about_me_content">
+        <div class="primary-content">
             <h2>About Me</h2>
             <hr width="95%">
             <img src="assets/images/elizabeth_sm_headshot.jpg" alt="Elizabeth Headshot" height="175">
