--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/Users/egsweeny/Desktop/UCB_Bootcamp/Assignments/HW1_Basic-Profile/Basic-Portfolio/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <script src="main.js"></script>
 </head>
 <body>
@@ -26,22 +26,22 @@
             <hr width="95%">
             <div class=”gallery”>
                     <figure class=”gallery__item--1">
-                      <img src="/Users/egsweeny/Desktop/UCB_Bootcamp/Assignments/HW1_Basic-Profile/Basic-Portfolio/assets/images/abstract.jpg" class="gallery__img" alt="Image 1" style="width:25%">
+                      <img src="assets/images/abstract.jpg" class="gallery__img" alt="Image 1" style="width:25%">
                     </figure>
                     <figure class="gallery__item gallery__item--2">
-                      <img src="/Users/egsweeny/Desktop/UCB_Bootcamp/Assignments/HW1_Basic-Profile/Basic-Portfolio/assets/images/animals.jpg" class="gallery__img" alt="Image 2" style="width:25%">
+                      <img src="assets/images/animals.jpg" class="gallery__img" alt="Image 2" style="width:25%">
                     </figure>
                     <figure class="gallery__item gallery__item--3">
-                      <img src="/Users/egsweeny/Desktop/UCB_Bootcamp/Assignments/HW1_Basic-Profile/Basic-Portfolio/assets/images/cats.jpg" class="gallery__img" alt="Image 3" style="width:25%">
+                      <img src="assets/images/cats.jpg" class="gallery__img" alt="Image 3" style="width:25%">
                     </figure>
                     <figure class="gallery__item gallery__item--4">
-                      <img src="/Users/egsweeny/Desktop/UCB_Bootcamp/Assignments/HW1_Basic-Profile/Basic-Portfolio/assets/images/city.jpg" class="gallery__img" alt="Image 4" style="width:25%">
+                      <img src="assets/images/city.jpg" class="gallery__img" alt="Image 4" style="width:25%">
                     </figure>
                     <figure class="gallery__item gallery__item--5">
-                      <img src="/Users/egsweeny/Desktop/UCB_Bootcamp/Assignments/HW1_Basic-Profile/Basic-Portfolio/assets/images/nature.jpg" class="gallery__img" alt="Image 5" style="width:25%">
+                      <img src="assets/images/nature.jpg" class="gallery__img" alt="Image 5" style="width:25%">
                     </figure>
                     <figure class="gallery__item gallery__item--6">
-                      <img src="/Users/egsweeny/Desktop/UCB_Bootcamp/Assignments/HW1_Basic-Profile/Basic-Portfolio/assets/images/people.jpg" class="gallery__img" alt="Image 6" style="width:25%">
+                      <img src="assets/images/people.jpg" class="gallery__img" alt="Image 6" style="width:25%">
                     </figure>
                   </div>
          
